all looks good 2

--- a/src/assets/sections/Header.astro
+++ b/src/assets/sections/Header.astro
@@ -43,8 +43,8 @@ import Badge from '../../components/Badge.astro';
 </Dialog>
 
 <Dialog title="¿Quieres decirnos algo?" id="contact">
-    <p>Utiliza este formulario para contactar con nosotros y te contestaremos lo antes posible.</p>
-    <form action="https://formspree.io/f/mYOUR_FORM_ID" method="POST" class="flex flex-col gap-4">
+    <p>Utiliza este formulario para contactar con nosotras/el equipo Teresa Molés y te responderemos lo antes posible.</p>
+    <form id="contact-form" action="https://formspree.io/f/mnjjjpyd" method="POST" class="flex flex-col gap-4">
         <Input
             label="Nombre"
             placeholder="Tu nombre completo"
