--- a/src/components/DialogTrigger.astro
+++ b/src/components/DialogTrigger.astro
@@ -11,10 +11,10 @@ import Input from "./Input.astro";
   data-open-dialog="avisame"
 />
 
- <Dialog title="Avísame de la apertura por email" id="avisame" showSubmit={false}>
+ <Dialog title="¡No te pierdas la apertura!" id="avisame" showSubmit={false}>
   <form action="https://formspree.io/f/maqqqezd" method="POST" class="flex flex-col gap-4">
     <p class="text-sm text-gray-600">
-      Si nos dejas tu email te avisaremos cuando abramos tu nueva clínica dental y espacio de bienestar.
+      Déjanos tu email y te avisaremos para la inauguración de la nueva Clínica Dental Teresa Molés, Espacio de Bienestar.
     </p>
 
     <Input
