--- a/src/assets/sections/Hero.astro
+++ b/src/assets/sections/Hero.astro
@@ -5,7 +5,7 @@ import DialogTrigger from "../../components/DialogTrigger.astro";
 
 <hero class="text-center flex flex-col items-center gap-8 sm:gap-16 px-4 sm:px-0">
     <h4 class="animate-fade-in-down animate-delay-200 px-2">
-      Próxima apertura Clínica Dental en Burriana.
+      Próxima apertura Clínica Dental en Burriana
     </h4>
 
     <img 
