--- a/src/assets/sections/Header.astro
+++ b/src/assets/sections/Header.astro
@@ -36,14 +36,16 @@ import Badge from '../../components/Badge.astro';
 <!-- Dialogs -->
 <Dialog title="Información" id="info" showSubmit={false}>
     <h4>El espacio</h4>
-    <p>Estamos trabajando para construir un espacio donde te sientas bien. Queremos ser tu Clínica Dental de confianza en Burriana y espacio de referencia en el bienestar.</p>
+    <p>Estamos creando un espacio donde te sientas bien desde el primer momento.
+      Un lugar tranquilo, cercano y pensado para tu bienestar.
+      Queremos ser tu clínica dental de confianza en Burriana y un referente en el cuidado de tu sonrisa.</p>
     <p>Nos encontramos en: <a href="https://www.google.com/maps/search/?api=1&query=Avenida+Cardenal+Vicente+Enrique+Tarancón+22,+Burriana" target="_blank" rel="noopener noreferrer" class="underline flex items-center gap-1" style="color: var(--color-primary);">Avenida Cardenal Vicente Enrique Tarancón 22 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg></a></p>
     <h4>Teresa Molés</h4>
     <p>Natural de Burriana, después de más de 10 años de experiencia en diferentes clínicas, ha decidido poner en marcha la suya propia. Su objetivo es tratar a las personas con profesionalidad, respeto y humanidad.</p>
 </Dialog>
 
-<Dialog title="¿Quieres decirnos algo?" id="contact">
-    <p>Utiliza este formulario para contactar con nosotras/el equipo Teresa Molés y te responderemos lo antes posible.</p>
+<Dialog title="¿En qué podemos ayudarte?" id="contact">
+    <p>Utiliza este formulario para contactar con el equipo de Teresa Molés y te responderemos lo antes posible.</p>
     <form id="contact-form" action="https://formspree.io/f/mnjjjpyd" method="POST" class="flex flex-col gap-4 px-2">
         <Input
             label="Nombre"
