--- a/src/assets/sections/Footer.astro
+++ b/src/assets/sections/Footer.astro
@@ -37,7 +37,7 @@ import Dialog from '../../components/Dialog.astro';
       {/* Copyright - centrado en móvil, derecha en desktop */}
       <div class="flex items-center justify-center sm:justify-end w-full sm:w-1/3 order-3 sm:order-3">
         <p class="text-xs text-center sm:text-right">
-          © {new Date().getFullYear()} Teresa Molés SL.
+          © {new Date().getFullYear()} Clínica Dental Teresa Molés SL.
         </p>
       </div>
       
@@ -49,14 +49,14 @@ import Dialog from '../../components/Dialog.astro';
 <Dialog title="Aviso Legal" id="legal" showSubmit={false}>
   <h4>Información General</h4>
   <p>En cumplimiento con el deber de información dispuesto en la Ley 34/2002 de Servicios de la Sociedad de la Información y el Comercio Electrónico (LSSI-CE) de 11 de julio, se facilitan los siguientes datos de información general de este sitio web:</p>
-  <p><strong>Denominación social:</strong> Teresa Molés SL</p>
-  <p><strong>NIF:</strong> [Insertar NIF]</p>
+  <p><strong>Denominación social:</strong> Clínica Dental Teresa Molés SL</p>
+  <p><strong>NIF:</strong> B23903156</p>
   <p><strong>Domicilio social:</strong> Avenida Cardenal Vicente Enrique Tarancón 22, Burriana (Castellón)</p>
-  <p><strong>Correo electrónico:</strong> info@teresamoles.es</p>
+  <p><strong>Correo electrónico:</strong> hola@clincateresamoles.com</p>
   <p><strong>Actividad:</strong> Servicios odontológicos y bienestar</p>
 
   <h4>Objeto y Ámbito de Aplicación</h4>
-  <p>El presente aviso legal regula el uso del sitio web www.teresamoles.es (en adelante, el "Sitio Web") que Teresa Molés SL pone a disposición del público.</p>
+  <p>El presente aviso legal regula el uso del sitio web www.teresamoles.es (en adelante, el "Sitio Web") que Clínica Dental Teresa Molés SL pone a disposición del público.</p>
 
   <h4>Condiciones de Uso</h4>
   <p>El acceso al Sitio Web es gratuito salvo en lo relativo al coste de la conexión a través de la red de telecomunicaciones suministrada por el proveedor de acceso contratado por los usuarios.</p>
@@ -64,10 +64,10 @@ import Dialog from '../../components/Dialog.astro';
 
 <Dialog title="Política de Privacidad" id="privacy" showSubmit={false}>
   <h4>Responsable del Tratamiento</h4>
-  <p><strong>Identidad:</strong> Teresa Molés SL</p>
-  <p><strong>NIF:</strong> [Insertar NIF]</p>
+  <p><strong>Identidad:</strong> Clínica Dental Teresa Molés SL</p>
+  <p><strong>NIF:</strong> B23903156</p>
   <p><strong>Dirección:</strong> Avenida Cardenal Vicente Enrique Tarancón 22, Burriana (Castellón)</p>
-  <p><strong>Correo electrónico:</strong> info@teresamoles.es</p>
+  <p><strong>Correo electrónico:</strong>  hola@clincateresamoles.com</p>
 
   <h4>Finalidad del Tratamiento</h4>
   <p>Los datos personales facilitados a través de los formularios del sitio web se recogen con las siguientes finalidades:</p>
@@ -84,7 +84,7 @@ import Dialog from '../../components/Dialog.astro';
   <p>No se cederán datos a terceros salvo obligación legal.</p>
 
   <h4>Derechos</h4>
-  <p>Puede ejercer sus derechos de acceso, rectificación, supresión, limitación, portabilidad y oposición enviando un email a info@teresamoles.es o carta a nuestra dirección.</p>
+  <p>Puede ejercer sus derechos de acceso, rectificación, supresión, limitación, portabilidad y oposición enviando un email a  hola@clincateresamoles.com o carta a nuestra dirección.</p>
 </Dialog>
 
 <Dialog title="Política de Cookies" id="cookies" showSubmit={false}>
