banner cookies added

--- a/src/assets/sections/Footer.astro
+++ b/src/assets/sections/Footer.astro
@@ -131,22 +131,21 @@ import Dialog from '../../components/Dialog.astro';
 
       <div class="flex flex-col sm:flex-row gap-2 mt-4">
           <Button
+          variant="default"
               label="Aceptar selección"
               id="save-cookie-config"
-              class="flex-1"
           />
           <Button
               label="Aceptar todas"
               id="accept-all-config"
               variant="outlined"
-              class="flex-1"
           />
           <Button
               label="Solo necesarias"
               id="accept-essential-config"
               variant="outlined"
-              class="flex-1"
           />
+          
       </div>
   </form>
 </Dialog>
