--- a/src/components/ButtonGroup.astro
+++ b/src/components/ButtonGroup.astro
@@ -54,6 +54,7 @@ const { buttons, class: className = '' } = Astro.props as Props;
     white-space: nowrap;
     text-decoration: none;
     border: solid 1px #e9e9e9;
+    cursor: pointer;
   }
   
   .button-group__item:hover {
