--- a/src/assets/sections/Header.astro
+++ b/src/assets/sections/Header.astro
@@ -46,7 +46,7 @@ import Badge from '../../components/Badge.astro';
 
 <Dialog title="¿En qué podemos ayudarte?" id="contact">
     <p>Utiliza este formulario para contactar con el equipo de Teresa Molés y te responderemos lo antes posible.</p>
-    <form id="contact-form" action="https://formspree.io/f/mnjjjpyd" method="POST" class="flex flex-col gap-4 px-2">
+    <form id="contact-form" action="https://formspree.io/f/mnjplykd" method="POST" class="flex flex-col gap-4 px-2">
         <Input
             label="Nombre"
             placeholder="Tu nombre completo"
