--- a/src/components/DialogTrigger.astro
+++ b/src/components/DialogTrigger.astro
@@ -12,7 +12,7 @@ import Input from "./Input.astro";
 />
 
  <Dialog title="¡No te pierdas la apertura!" id="avisame" showSubmit={false}>
-  <form id="avisame-form" action="https://formspree.io/f/maqqqezd" method="POST" class="flex flex-col gap-4 px-2">
+  <form id="avisame-form" action="https://formspree.io/f/mwvlajzl" method="POST" class="flex flex-col gap-4 px-2">
     <p class="text-sm text-gray-600">
       Déjanos tu email y te avisaremos para la inauguración de la nueva Clínica Dental Teresa Molés, Espacio de Bienestar.
     </p>
